<resources>
    <string name="app_name">Tip Tracker</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="choose_day_prompt">Day of the week</string>
    <string name="tips_received">Tips Received</string>
    <string name="week_id">Week of" "</string>
    <string name="dollar_sign">$ </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="error_saving">Error Saving Tips</string>
    <string name="week_saved">Week Saved</string>
    <string name="empty_view_text">Click + To Add A Work Week</string>
    <string name="delete_week">Delete this week?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_deleting_week">Error Deleting Week</string>
    <string name="week_deleted">Week Deleted</string>
    <string name="current_week">Current Week</string>
    <string name="delete_all_weeks">Delete All Weeks</string>
    <string name="delete_all_weeks_dialog">Delete All Weeks?</string>
    <string name="edit_week_title">Edit Work Week</string>
    <string name="weeks_deleted">Weeks Deleted</string>
    <string name="save">Save</string>
    <string name="determine_weekly_average">Determine Weekly Average</string>
    <string name="average_tips_per_week">Average tips per week: $</string>
    <string name="OK">OK</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="week_created">Week Created</string>
    <string name="hourly_rate">Hourly Rate: $</string>
    <string name="add_work_week">Add Work Week</string>
    <string name="calc_hourly_rate">Calculate Hourly Rate</string>
</resources>
