<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_work_week"
        android:title="@string/add_work_week"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_add_tip"
        />

    <item
        android:id="@+id/weekly_average"
        android:title="@string/determine_weekly_average"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/delete_all_data"
        android:title="@string/delete_all_weeks"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/average_hourly_pay"
        android:title="@string/calc_hourly_rate"
        app:showAsAction="never"
        />

</menu>